[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameDVDCardtridge/ParlorClassic/Tscene/GamePlayUI.gd" type="Script" id=1]
[ext_resource path="res://font/ubuntu-font-family-0.83/Ubuntu-M.ttf" type="FontFile" id=2]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/Derival/PauseButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/MetererBekgron.png" type="Texture2D" id=4]
[ext_resource path="res://fonts/Built/Oswald_B_72.tres" type="FontFile" id=5]
[ext_resource path="res://Sprites/MetererProgress.png" type="Texture2D" id=6]
[ext_resource path="res://GameDVDCardtridge/ParlorClassic/Photoshop/Vincent Thamrin/HandGun.png" type="Texture2D" id=7]
[ext_resource path="res://fonts/Built/Oswald_B_48.tres" type="FontFile" id=8]
[ext_resource path="res://Sprites/AnotherMetererBekgron.png" type="Texture2D" id=9]
[ext_resource path="res://Sprites/AnotherMetererOver.png" type="Texture2D" id=10]
[ext_resource path="res://Sprites/AnotherMetererProgress.png" type="Texture2D" id=11]


[sub_resource type="FontFile" id=1]
resource_local_to_scene = true
resource_name = "Ubuntu Medium 48"
size = 48
outline_size = 1
outline_color = Color( 0.129412, 0, 0.219608, 1 )
font_data = ExtResource( 2 )

[node name="GamePlayUI" type="Control"]
process_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainsHUD" type="VBoxContainer" parent="."]
process_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopHUD" type="HBoxContainer" parent="ContainsHUD"]
offset_right = 1920.0
offset_bottom = 75.0
custom_minimum_size = Vector2( 0, 75 )
mouse_filter = 0
size_flags_horizontal = 3
alignment = 1

[node name="Score" type="HBoxContainer" parent="ContainsHUD/TopHUD"]
offset_right = 827.0
offset_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ContainsHUD/TopHUD/Score"]
offset_right = 827.0
offset_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme_override_fonts/font = ExtResource( 8 )
text = "Score: 12345678901234567890"

[node name="PauseButton" parent="ContainsHUD/TopHUD" instance=ExtResource( 3 )]
process_mode = 2
offset_left = 835.0
offset_right = 1085.0
offset_bottom = 75.0
theme_override_fonts/font = SubResource( 1 )
UseTheme = true

[node name="HealthPoint" type="HBoxContainer" parent="ContainsHUD/TopHUD"]
offset_left = 1093.0
offset_right = 1920.0
offset_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureProgressBar" type="TextureProgressBar" parent="ContainsHUD/TopHUD/HealthPoint"]
offset_right = 827.0
offset_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 9 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 11 )
nine_patch_stretch = true

[node name="Space" type="CenterContainer" parent="ContainsHUD"]
offset_top = 83.0
offset_right = 1920.0
offset_bottom = 972.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomHUD" type="HBoxContainer" parent="ContainsHUD"]
offset_top = 980.0
offset_right = 1920.0
offset_bottom = 1080.0
custom_minimum_size = Vector2( 0, 100 )
mouse_filter = 0
alignment = 1

[node name="AmmoBar" type="HBoxContainer" parent="ContainsHUD/BottomHUD"]
offset_right = 852.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ReloadButton" type="Button" parent="ContainsHUD/BottomHUD/AmmoBar"]
offset_right = 852.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ContainsHUD/BottomHUD/AmmoBar/ReloadButton"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoCounterPercent" type="TextureProgressBar" parent="ContainsHUD/BottomHUD/AmmoBar/ReloadButton/HBoxContainer"]
offset_right = 768.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoNumber" type="Label" parent="ContainsHUD/BottomHUD/AmmoBar/ReloadButton/HBoxContainer"]
offset_left = 776.0
offset_right = 852.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource( 5 )
text = "12"

[node name="AmmoBar2" type="HBoxContainer" parent="ContainsHUD/BottomHUD"]
offset_left = 860.0
offset_right = 1060.0
offset_bottom = 100.0
custom_minimum_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="WeponSelect" type="HBoxContainer" parent="ContainsHUD/BottomHUD"]
offset_left = 1068.0
offset_right = 1920.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PrevWepon" type="Button" parent="ContainsHUD/BottomHUD/WeponSelect"]
offset_right = 150.0
offset_bottom = 100.0
custom_minimum_size = Vector2( 150, 0 )
theme_override_fonts/font = ExtResource( 8 )
text = "PREV"

[node name="WeponIcon" type="HBoxContainer" parent="ContainsHUD/BottomHUD/WeponSelect"]
offset_left = 158.0
offset_right = 694.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="WeponImage" type="TextureRect" parent="ContainsHUD/BottomHUD/WeponSelect/WeponIcon"]
offset_right = 129.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="WeponLabel" type="Label" parent="ContainsHUD/BottomHUD/WeponSelect/WeponIcon"]
offset_left = 137.0
offset_right = 536.0
offset_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource( 5 )
text = "Tangan Pistol"

[node name="NextWepon" type="Button" parent="ContainsHUD/BottomHUD/WeponSelect"]
offset_left = 702.0
offset_right = 852.0
offset_bottom = 100.0
custom_minimum_size = Vector2( 150, 0 )
theme_override_fonts/font = ExtResource( 8 )
text = "NEXT"
[connection signal="pressed" from="ContainsHUD/TopHUD/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="ContainsHUD/BottomHUD/AmmoBar/ReloadButton" to="." method="_on_ReloadButton_pressed"]
[connection signal="pressed" from="ContainsHUD/BottomHUD/WeponSelect/PrevWepon" to="." method="_on_PrevWepon_pressed"]
[connection signal="pressed" from="ContainsHUD/BottomHUD/WeponSelect/NextWepon" to="." method="_on_NextWepon_pressed"]
